added js file, made changes to css and html file

--- a/Style/Page styles/Banner&Footer.css
+++ b/Style/Page styles/Banner&Footer.css
@@ -134,6 +134,11 @@ body {
 .insta:active {
   color: #cd06ff;
 }
+
+.Account-open {
+  visibility: visible;
+}
+
 .Account-tab {
   display: flex;
   height: 110px;
