--- a/Style/Page styles/All-Products.css
+++ b/Style/Page styles/All-Products.css
@@ -324,8 +324,10 @@ h4 {
   font-weight: 700;
   text-align: center;
   position: relative;
-  top: -480px;
-  left: 180px;
+  top: -485px;
+  left: 210px;
+  width: 100px;
+  z-index: 1;
 }
 
 .Limited-text {
