--- a/Style/Page styles/All-Products.css
+++ b/Style/Page styles/All-Products.css
@@ -24,10 +24,13 @@
   margin: 0;
 }
 
+.type {
+  border-top: 2px solid rgb(0, 0, 0);
+}
+
 .type,
 .colours {
   margin-bottom: 2.4rem;
-  border-top: 2px solid rgb(0, 0, 0);
 }
 
 /* Product section */
