fixed ccs links in html

--- a/Style/Page styles/PDP/N1ghtW0lf/NW-PRODS.css
+++ b/Style/Page styles/PDP/N1ghtW0lf/NW-PRODS.css
@@ -1,22 +1,22 @@
-.base-image {
+.LE-NW-base-image-hat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-Blue.jpg);
 }
 
-.grey-hat {
+.LE-NW-grey-hat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView.jpg);
 }
-.blue-hat {
+.LE-NW-blue-hat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView-blue.jpg);
 }
-.fem-greyHat {
+.LE-NW-fem-greyHat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel.jpg);
 }
-.fem-blueHat {
+.LE-NW-fem-blueHat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-Blue.jpg);
 }
-.man-greyHat {
+.LE-NW-man-greyHat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel.jpg);
 }
-.man-blueHat {
+.LE-NW-man-blueHat {
   background-image: url(/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel-blue.jpg);
 }
