--- a/Style/Page styles/Banner-links/All-Products.css
+++ b/Style/Page styles/Banner-links/All-Products.css
@@ -125,6 +125,11 @@
   width: 20px;
   outline: 1px solid #000;
 }
+
+.blue-block {
+  background-color: #0a82d1;
+}
+
 .black-block {
   background-color: #000;
 }
