rewrote js to work for all product tabs

--- a/Style/Page styles/Banner-links/Basket.css
+++ b/Style/Page styles/Banner-links/Basket.css
@@ -64,3 +64,14 @@
   font-weight: 600;
   margin: 10px 0;
 }
+
+.cartDelete-item {
+  position: relative;
+  right: -230px;
+  top: -35px;
+  cursor: pointer;
+}
+
+.cartDelete-item:hover {
+  color: red;
+}
