--- a/Dark&Light.css
+++ b/Dark&Light.css
@@ -1,3 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Kaushan+Script&family=Oswald:wght@200..700&display=swap");
+
+:root {
+  --primary-color: #151566;
+  --primary-variant: #b82b2b;
+  --secondary-color: rgb(61, 61, 61);
+  --on-primary: #000;
+  --on-background: rgba(241, 241, 241, 0.9);
+  --on-background-alt: rgba(0, 0, 0, 0.7);
+  --background: #121212;
+  --box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.5);
+  --nav-Link: rgb(175, 9, 9);
+  --text-alt: rgb(255, 255, 255);
+  --dubby: rgb(255, 208, 0);
+  /* --product-card:; */
+}
+
+[data-theme="dark"] {
+  --primary-color: #1d2228;
+  --primary-variant: #ff2d2d;
+  --secondary-color: #cacaca;
+  --on-primary: rgb(250, 250, 250);
+  --on-background: rgb(252, 252, 252);
+  --on-background-alt: rgba(216, 216, 216, 0.7);
+  --background: rgb(255, 255, 255);
+  --box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.5);
+  --nav-Link: rgb(160, 79, 226);
+  --text-alt: rgb(44, 44, 44);
+  --dubby: rgb(255, 208, 0);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -9,13 +40,18 @@ body {
 
 .banner {
   height: 120px;
-  background-color: #252553;
+  background-color: var(--primary-color);
   padding-left: 2rem;
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.4);
   margin-bottom: 4.6rem;
 }
 .Banner-logo {
   width: 215px;
+}
+
+#nav {
+  display: flex;
+  gap: 2rem;
 }
 
 .navigation {
@@ -51,7 +87,7 @@ body {
   cursor: pointer;
   text-decoration: none;
   color: rgb(255, 215, 215);
-  background-color: rgb(119, 0, 0);
+  background-color: var(--nav-Link);
   padding: 0.8rem 1.2rem;
   border: 1.5px solid rgba(0, 0, 0, 0.4);
   border-radius: 50px;
@@ -194,4 +230,80 @@ body {
 .account-tab-btn:hover,
 .account-tab-btn:active {
   background-color: #ececec;
+}
+
+/* Dark Mode Toggle */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  z-index: 100;
+  position: absolute;
+  right: 25px;
+  top: 75px;
+}
+
+.theme-switch-wrapper span {
+  margin-right: 5px;
+  font-size: 12px;
+}
+.toggle-text {
+  position: relative;
+  top: -2px;
+  right: 5px;
+  color: var(--on-background);
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background: var(--nav-Link);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider::before {
+  background: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background: var(--nav-Link);
+}
+
+input:checked + .slider::before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round::before {
+  border-radius: 50%;
+}
+
+.fas {
+  font-size: 20px;
+  margin-right: 5px;
+  color: var(--on-background-alt);
 }
