--- a/Style/Page styles/Banner-links/Home.css
+++ b/Style/Page styles/Banner-links/Home.css
@@ -1,12 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto";
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
-
 /* Content */
 
 .Welcome {
@@ -19,10 +10,13 @@ body {
 }
 
 .grid-left {
-  color: #f5f5f5;
+  color: whitesmoke;
   padding: 2rem;
   width: 700px;
-  background-color: rgb(57, 56, 57);
+  background-color: rgb(61, 61, 61);
+  border: none;
+  border-radius: 11px;
+  box-shadow: var(--box-shadow);
 }
 
 .heading-primary {
@@ -40,8 +34,8 @@ body {
 }
 .dubby {
   font-weight: 700;
-  text-decoration: underline rgb(255, 208, 0);
-  color: rgb(255, 208, 0);
+  text-decoration: underline var(--dubby);
+  color: var(--dubby);
 }
 .quote-text {
   margin-bottom: 0;
@@ -111,15 +105,11 @@ body {
   fill: #2121b6;
 }
 
-.get-container {
-  height: 100px;
-}
 .Get {
   color: #fff2f2;
   background-color: rgb(175, 1, 1);
   padding: 0.6rem 1.2rem;
   border-radius: 50px;
-  margin-left: 2.7rem;
   border: 1px solid rgb(43, 0, 0);
   border-bottom: 3px solid rgb(43, 0, 0);
 }
