--- a/Dark&Light.css
+++ b/Dark&Light.css
@@ -6,7 +6,7 @@
   --secondary-color: rgb(61, 61, 61);
   --on-primary: #000;
   --on-background: rgba(241, 241, 241, 0.9);
-  --on-background-alt: rgba(0, 0, 0, 0.7);
+  --on-background-alt: rgb(231, 231, 231);
   --background: #121212;
   --box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.5);
   --nav-Link: rgb(175, 9, 9);
@@ -17,11 +17,13 @@
 
 [data-theme="dark"] {
   --primary-color: #1d2228;
+  /* --primary-color: black; */
+
   --primary-variant: #ff2d2d;
   --secondary-color: #cacaca;
   --on-primary: rgb(250, 250, 250);
   --on-background: rgb(252, 252, 252);
-  --on-background-alt: rgba(216, 216, 216, 0.7);
+  --on-background-alt: rgb(146, 146, 146);
   --background: rgb(255, 255, 255);
   --box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.5);
   --nav-Link: rgb(160, 79, 226);
@@ -236,7 +238,7 @@ body {
 .theme-switch-wrapper {
   display: flex;
   align-items: center;
-  z-index: 100;
+  z-index: 4;
   position: absolute;
   right: 25px;
   top: 75px;
